調整三角形

--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -706,7 +706,7 @@ footer {
         margin-top: -1em;
         &::before{
             right: 50%;
-            transform: translateX(-6px);
+            transform: translateX(50%);
         }
     }
     @include screen('mobile') {
