--- a/css/boca_personal.css
+++ b/css/boca_personal.css
@@ -8885,7 +8885,7 @@ footer .footer_icon {
   }
   .styleBox::before {
     right: 50%;
-    transform: translateX(-6px);
+    transform: translateX(50%);
   }
 }
 @media screen and (max-width: 767px) {
