--- a/sass/page/_personal.scss
+++ b/sass/page/_personal.scss
@@ -27,8 +27,8 @@
 	}
 	.control_panle{
 		.container{
-			background: url(../images/bg-hero-personal.png) 50% 20% no-repeat, #fff;
-      background-size: contain;
+			background: url(../images/bg-hero-personal.jpg) 80% 20% no-repeat, #fff;
+      // background-size: contain;
 			min-height: 683px;
 			box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
