--- a/css/boca.css
+++ b/css/boca.css
@@ -8749,14 +8749,14 @@ footer .footer_icon {
   }
 }
 .Login .loginInfo {
-  margin-top: 12em;
+  margin-top: 10em;
 }
 .Login .loginInfo .tips {
   background: rgba(255, 255, 255, 0.7294117647);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
   padding: 1em 1.75em;
-  margin-top: 2em;
+  margin-top: 10px;
   border-radius: 6px;
   position: relative;
 }
@@ -8904,6 +8904,11 @@ footer .footer_icon {
   background: transparent !important;
   box-shadow: none;
   padding: 0 !important;
+}
+.styleBox .tips ol, .styleBox .tips ul,
+.verify .tips ol,
+.verify .tips ul {
+  margin: 1em 0 !important;
 }
 
 .Page .header h1 {
