--- a/css/boca_personal.css
+++ b/css/boca_personal.css
@@ -8749,14 +8749,14 @@ footer .footer_icon {
   }
 }
 .Login .loginInfo {
-  margin-top: 12em;
+  margin-top: 10em;
 }
 .Login .loginInfo .tips {
   background: rgba(255, 255, 255, 0.7294117647);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
   padding: 1em 1.75em;
-  margin-top: 2em;
+  margin-top: 10px;
   border-radius: 6px;
   position: relative;
 }
@@ -8904,6 +8904,11 @@ footer .footer_icon {
   background: transparent !important;
   box-shadow: none;
   padding: 0 !important;
+}
+.styleBox .tips ol, .styleBox .tips ul,
+.verify .tips ol,
+.verify .tips ul {
+  margin: 1em 0 !important;
 }
 
 .Page .header h1 {
@@ -11865,8 +11870,7 @@ h1.title, h2.title {
   background-size: 12px 12px;
 }
 .Login .control_panle .container {
-  background: url(../images/bg-hero-personal.png) 50% 20% no-repeat, #fff;
-  background-size: contain;
+  background: url(../images/bg-hero-personal.jpg) 80% 20% no-repeat, #fff;
   min-height: 683px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   position: relative;
