--- a/css/boca_personal.css
+++ b/css/boca_personal.css
@@ -8605,9 +8605,9 @@ footer .footer_icon {
 .Login .control_panle .container:before {
   content: "";
   position: absolute;
-  width: 145px;
-  height: 152px;
-  background: url(../images/deco-been-1.png) 50% 50% no-repeat;
+  width: 1340px;
+  height: 300px;
+  background: url(../images/deco-been-1.png) left top no-repeat, url(../images/deco-been-2.png) right bottom no-repeat;
   left: -100px;
   top: 500px;
 }
