--- a/sass/page/_personal.scss
+++ b/sass/page/_personal.scss
@@ -45,7 +45,7 @@
 			}
 
 			&:before{
-				background: url(../images/deco-been-1-personal.png) 50% 50% no-repeat;
+				background: url(../images/deco-been-1-personal.png) left top no-repeat;
 				top: 420px;
 			}
 		}
