hero img position 調整

--- a/sass/page/_personal.scss
+++ b/sass/page/_personal.scss
@@ -27,7 +27,7 @@
 	}
 	.control_panle{
 		.container{
-			background: url(../images/bg-hero-personal.jpg) 80% 20% no-repeat, #fff;
+			background: url(../images/bg-hero-personal.jpg) 80% 20px no-repeat, #fff;
       // background-size: contain;
 			min-height: 683px;
 			box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
