--- a/sass/sass/modual/_form-beta.scss
+++ b/sass/sass/modual/_form-beta.scss
@@ -1751,20 +1751,23 @@ input[type="radio"]:focus {
     outline: none;
 }
 
-input[type="checkbox"]:checked {
+input[type="checkbox"]:checked{
     background-image: url(../images/basic/icon_checked.svg);
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: 50% 50%;
     background-size: 98%;
     box-shadow: $form-focus 0 0 0 2px;
     border-radius: 2px;
 }
-// 已選取又disabled
+// 已選取又 disabled
 input[type="checkbox"]:checked:disabled{
     background-image: url(../images/basic/icon_checked.svg) !important;
+    background-repeat: no-repeat !important;
+    background-position: 50% 50% !important;
     border-color: $form-focus !important;
     background-color: $form-focus !important;
     background-size: 98% !important;
+    border-width: 2px !important;
 }
 
 input[type="radio"]:checked {
